# TW2002-Human-assist

./: .commitmsg.tmp  .env.example  .gitignore  README.md  _commit_msg.txt  _msg.tmp  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENCY_INITIATIVE.md  AGENT_TURN_ANATOMY.md  AI_ACTION_AUDIT.md  ARCHITECTURE.md  BACKBURNER.md  BASICS_AUDIT_V7.md  DESIGN.md  FEATURE_COMPARISON.md  HEALTHY_GAME_PLAYBOOK.md  HUMAN_COPILOT_PLAN.md  LOCAL_STT_PLAN.md  MATCH_PLAY_NOTES.md  MULTI_HUMAN_PLAN.md  PLAYBOOK.md  ROADMAP.md  TEST_REPORT_H6.md  UI_DESIGN.md  USER_GUIDE.md
docs/agent_turn/: action_hint.txt  example_llm_response.json  observation_raw.json  stage_hint.json  system_prompt.md  user_message.json
scripts/: _cost_estimate.py  _forensics.py  _memory_inspect.py  _poll_match.py  _thought_tail.py  cost_report.py  dump_turn_anatomy.py  run_match_headless.py  smoke_cursor_agent.py  smoke_phase_abc.py  smoke_watch_scorecard.py  summarize_match.py  watch_match.py
src/tw2k/: __init__.py  cli.py  mcp_server.py
src/tw2k/agents/: __init__.py  base.py  heuristic.py  human.py  llm.py  llm_usage.py  prompts.py
src/tw2k/copilot/: __init__.py  chat_agent.py  dashboards.py  human_sim.py  memory.py  otel.py  provider.py  registry.py  safety.py  session.py  standing_orders.py  task_agent.py  tools.py  trace.py  ui_agent.py  whatif.py
src/tw2k/engine/: __init__.py  actions.py  agency.py  combat.py  constants.py  economy.py  ferrengi.py  llm_pricing.py  match_metrics.py  models.py  observation.py  planets.py  runner.py  universe.py  victory.py
src/tw2k/server/: __init__.py  app.py  broadcaster.py  replay.py  runner.py
tests/: test_agency.py  test_copilot_phase_h2.py  test_copilot_phase_h4.py  test_copilot_phase_h5.py  test_copilot_phase_h6.py  test_cursor_provider.py  test_dotenv_loader.py  test_economy_ui_phase_h6.py  test_engine.py  test_heuristic_smoke.py  test_history_buffer.py  test_human_agent_phase_h0.py  test_human_queue_flush.py  test_human_sim_phase_h25.py  test_human_ui_phase_h1.py  test_llm_cost.py  test_observation_memory.py  test_phase1_m31_m412.py  test_phase_abc.py  test_prompts.py  test_replay_roundtrip.py  test_run_match_headless.py  test_ui_smoke.py  test_voice_ui_phase_h3.py  test_voice_ui_phase_h4.py  test_voice_ui_phase_h5.py  test_watch_match.py
web/: app.js  index.html  play.css  play.html  play.js  style.css
