[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tw2k-ai"
version = "0.1.0"
description = "TradeWars 2002 clone played by LLM agents, with a live spectator UI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "TW2K-AI Contributors" }]
keywords = ["tradewars", "tw2002", "bbs", "door-game", "llm", "ai-agents"]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "websockets>=12.0",
    "anthropic>=0.39",
    "openai>=1.40",
    "rich>=13.7",
    "typer>=0.12",
    "httpx>=0.27",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
tw2k = "tw2k.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
