[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tw2k-ai"
version = "0.1.0"
description = "TradeWars 2002 clone played by LLM agents, with a live spectator UI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "TW2K-AI Contributors" }]
keywords = ["tradewars", "tw2002", "bbs", "door-game", "llm", "ai-agents"]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "websockets>=12.0",
    "anthropic>=0.39",
    "openai>=1.40",
    "rich>=13.7",
    "typer>=0.12",
    "httpx>=0.27",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
]
# Phase H6.1 — MCP server adapter for Cursor/Claude Code. Install with:
#   pip install "tw2k-ai[mcp]"
mcp = [
    "mcp>=1.2",
]
# Phase H6.3 — OpenTelemetry tracing (Weave/Jaeger/Honeycomb). Install with:
#   pip install "tw2k-ai[otel]"
otel = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[project.scripts]
tw2k = "tw2k.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",   # line-too-long: handled by formatter in practice
    "E741",   # ambiguous-variable-name: too aggressive for math/short loops
    "E702",   # multiple-statements-on-one-line-semicolon: used in tight inline helpers
    "N812",   # lowercase-imported-as-non-lowercase (NumPy/matplotlib style imports)
    "N817",   # camelcase-imported-as-acronym (typer/pydantic ergonomics)
    "UP042",  # replace-str-enum: StrEnum has different equality semantics we rely on
    "SIM105", # suppressible-exception: explicit try/except/pass is more readable
    "SIM102", # collapsible-if: nested ifs often more readable
    "SIM103", # needless-bool: readability > terseness for branching returns
    "RUF003", # ambiguous-unicode in comments: we intentionally ship unicode art
    "RUF059", # unused-unpacked-variable: fixtures often destructure and discard
]

[tool.ruff.lint.per-file-ignores]
# Tests routinely destructure fixtures and use short names.
"tests/**" = ["F841", "B007", "RUF005", "RUF046"]
# Scripts often have ad-hoc globbing / one-off helpers.
"scripts/**" = ["SIM115"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
